# FITing-Tree

./: README.md
contrib/fiting_tree/: Makefile  README.md  fiting_tree--1.0.sql  fiting_tree.control  fiting_tree.h  ft_build.c  ft_cost.c  ft_handler.c  ft_info.c  ft_insert.c  ft_options.c  ft_scan.c  ft_utils.c  ft_vacuum.c  meson.build
contrib/fiting_tree/Datasets/: github_events_m.csv  github_events_s.csv  globe_population.csv  plot_errtt.py  plot_idxsz.py  plot_insrt.py  synthetic_test.py  test_basic.py  test_git_events.py  test_git_events_m.py  test_git_events_s.py
